# Simple-Automata

./: .gitignore  Cargo.toml  LICENSE
resources/: style.css
rulesets/: Blank.toml  Conway.toml  Fire.toml  Test.toml  Test10.toml  Test54.toml
src/: cell.rs  condition.rs  display.rs  events.rs  grid.rs  id.rs  input.rs  main.rs  material.rs  pattern.rs  ruleset.rs  text.rs
src/display/: cell_selector.rs  debug.rs  grid.rs  mod.rs  options.rs  styles.rs
src/logic/: cell.rs  grid.rs  mod.rs  parser.rs  rules.rs
test_files/: conway.toml  step_test.toml  test.toml  wires.toml
