[package]
name = "automata_vizia"
version = "0.1.0"
edition = "2021"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
vizia = {git = "https://github.com/vizia/vizia"}
