[package]
name = "automata_vizia"
version = "0.1.0"
edition = "2021"

[lints.clippy]
module_name_repetitions = "allow"
enum_glob_use = "deny"
unwrap_used = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
debug = true

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
vizia = {git = "https://github.com/vizia/vizia"}
